--- a/templates/home.html
+++ b/templates/home.html
@@ -110,6 +110,7 @@
             {% for post in posts %}
             <div class="post-container">
                 <h3 class="post-title">{{ post.title }}</h3>
+                <a href="{{ post.url }}" class="post-content" target="_blank">{{ post.url }}</a>
                 <pre class="post-content">{{ post.content }}</pre>
                 <div class="post-meta">
                     <small>Posted on {{ post.date_posted.strftime('%Y-%m-%d') }}</small>
