--- a/templates/home.html
+++ b/templates/home.html
@@ -101,6 +101,8 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="profile">Profile</a></li>
                 <li><a href="create_post">Create Post</a></li>
+                <li><a href="login">Login</a></li>
+                <li><a href="register">Regiser</a></li>
             </ul>
         </nav>
     </header>
