--- a/templates/home.html
+++ b/templates/home.html
@@ -122,32 +122,34 @@
                     <small>Posted on {{ post.date_posted.strftime('%Y-%m-%d') }}</small>
                 </div>
                 <div class="post-actions">
-                    <!-- Like button -->
-                    <form action="{{ url_for('like_post', post_id=post.id) }}" method="post" class="action-button">
-                        <button type="submit" style="background: none; border: none; padding: 5;">                            
-                            <img src="{{ url_for('static', filename='icons/like_icon.png') }}" alt="Like">
-                            <span>{{ post.likes }}</span>
-                        </button>
-                    </form>
-                    <!-- Dislike button -->
-                    <form action="{{ url_for('dislike_post', post_id=post.id) }}" method="post" class="action-button">
-                        <button type="submit" style="background: none; border: none; padding: 5;">                            
-                            <img src="{{ url_for('static', filename='icons/dislike_icon.png') }}" alt="Dislike">
-                            <span>{{ post.dislikes }}</span>
-                        </button>
-                    </form>
-                    <!-- Edit button -->
-                    <a href="{{ url_for('show_edit_post_form', post_id=post.id) }}" class="action-button">
-                        <button type="submit" style="background: none; border: none; padding: 5;">                            
-                            <img src="{{ url_for('static', filename='icons/edit_icon.png') }}" alt="Edit">
-                        </button>
-                    </a>
-                    <!-- Delete button -->
-                    <form action="{{ url_for('delete_post', post_id=post.id) }}" method="post" class="action-button">
-                        <button type="submit" style="background: none; border: none; padding: 5;">                            
-                            <img src="{{ url_for('static', filename='icons/delete_icon.png') }}" alt="Delete">
-                        </button>
-                    </form>
+		    {% if user_id %}
+                        <!-- Like button -->
+                        <form action="{{ url_for('like_post', post_id=post.id) }}" method="post" class="action-button">
+                            <button type="submit" style="background: none; border: none; padding: 5;">                            
+                                <img src="{{ url_for('static', filename='icons/like_icon.png') }}" alt="Like">
+                                <span>{{ post.likes }}</span>
+                            </button>
+                        </form>
+                        <!-- Dislike button -->
+                        <form action="{{ url_for('dislike_post', post_id=post.id) }}" method="post" class="action-button">
+                            <button type="submit" style="background: none; border: none; padding: 5;">                            
+                                <img src="{{ url_for('static', filename='icons/dislike_icon.png') }}" alt="Dislike">
+                                <span>{{ post.dislikes }}</span>
+                            </button>
+                        </form>
+                        <!-- Edit button -->
+                        <a href="{{ url_for('show_edit_post_form', post_id=post.id) }}" class="action-button">
+                            <button type="submit" style="background: none; border: none; padding: 5;">                            
+                                <img src="{{ url_for('static', filename='icons/edit_icon.png') }}" alt="Edit">
+                            </button>
+                        </a>
+                        <!-- Delete button -->
+                        <form action="{{ url_for('delete_post', post_id=post.id) }}" method="post" class="action-button">
+                            <button type="submit" style="background: none; border: none; padding: 5;">                            
+                                <img src="{{ url_for('static', filename='icons/delete_icon.png') }}" alt="Delete">
+                            </button>
+                        </form>
+		    {% endif %}
                 </div>
             </div>
             {% endfor %}
