--- a/templates/home.html
+++ b/templates/home.html
@@ -117,6 +117,10 @@
                     <li><a href="logout">Logout</a></li>
                 {% endif %}
             </ul>
+            <form action="{{ url_for('search_results') }}" method="GET" style="display: inline-block; margin-left: 20px;">
+                <input type="text" name="query" placeholder="Search posts..." required>
+                <button type="submit">Search</button>
+            </form>
         </nav>
     </header>
     <main>
