Fixed the search and profile page buttons

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -80,8 +80,8 @@
     <header>
         <nav>
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="profile">Profile</a></li>
+                <li><a href="{{ url_for('home') }}">Home</a></li>
+                <li><a href="{{ url_for('logout') }}">Logout</a></li>
             </ul>
         </nav>
     </header>
